objects/vlocity_ins__InsuranceClaimReport__c.object
<CustomObject>
    <description>An accident, police, fire, or similar report filed by an official detailing the specifics of incurred loss. Master-detail child object of Claim.</description>
    <fields>
        <fullName>vlocity_ins__ClaimId__c</fullName>
        <label>Claim</label>
        <referenceTo>vlocity_ins__InsuranceClaim__c</referenceTo>
        <relationshipLabel>Claim Reports</relationshipLabel>
        <relationshipName>Claim_Reports</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Department__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Department</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Jurisdiction__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Jurisdiction</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Officer__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Officer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ReportDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accident Report</fullName>
                </value>
                <value>
                    <fullName>Fire Report</fullName>
                </value>
                <value>
                    <fullName>Incident Report</fullName>
                </value>
                <value>
                    <fullName>Police Report</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Claim Report</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Report Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Claim Reports</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>